# dynpathresolver

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.x86_64  LICENSE  README.md  docker-compose.x86_64.yml  docker-compose.yml  evaluate.py  evaluate_full.py  evaluate_simple.py  install.sh  pyproject.toml  run_benchmarks.sh
.claude/: settings.local.json
dynpathresolver/: __init__.py
dynpathresolver/analysis/: __init__.py  behavior_analyzer.py  control_flow.py  heuristic_predictor.py  pattern_predictor.py  predictor.py  string_assembler.py
dynpathresolver/cfg/: __init__.py  builder.py  types.py
evaluation/: generate_figures.py  run_evaluation.py
examples/: README.md  cfg_builder_example.py  cfg_builder_fast_example.py  cfg_builder_full_example.py  run_analysis.py
tests/: __init__.py  conftest.py  test_cfg_builder.py  test_clone.py  test_complex_loader.py  test_control_flow.py  test_decryption.py  test_directed.py  test_discovery_log.py  test_env_tracker.py  test_exec.py  test_extended_simprocedures.py  test_fopen.py  test_guards.py  test_ifunc.py  test_init_tracker.py  test_integration.py  test_integration_v2.py  test_interceptor.py  test_memory_tracker.py  test_mremap.py  test_patcher.py  test_platform.py  test_prctl.py  test_predictor.py  test_preloader.py  test_process_vm.py  test_ptrace.py  test_resolver.py  test_shadow_memory.py  test_simprocedures.py  test_socket.py  test_stages.py  test_syscall_hooks.py  test_taint.py  test_technique.py  test_technique_v2.py  test_technique_validation.py  test_unpacking.py  test_validator.py  (+2 more)
tests/binaries/: Makefile  (+1 more)
(+208 files in other folders)
