[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynpathresolver"
version = "0.1.0"
description = "Dynamic-assisted CFG recovery for angr"
requires-python = ">=3.10"
dependencies = [
    "angr>=9.2",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dynpathresolver*"]
exclude = ["tests*", "examples*", "evaluation*", "paper*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
